add option to filter devices based on attributes
