# docs/swagger.json
@@ -122,7 +122,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Query current states for multiple IDs (supported: devices, gateways/hubs).",
+                "description": "Query current states for multiple IDs (supported: devices, gateways/hubs, device-groups, locations).",
                 "consumes": [
                     "application/json"
                 ],
@@ -135,12 +135,12 @@
                 "summary": "Query current states",
                 "parameters": [
                     {
-                        "description": "query object",
+                        "description": "query object, attribute value and origin will only be checked if set, otherwise all values or origins will be blacklisted",
                         "name": "query",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.QueryBase"
+                            "$ref": "#/definitions/model.QueryWithAttributeFilter"
                         }
                     }
                 ],
@@ -176,7 +176,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Query current states for multiple IDs (supported: devices, gateways/hubs).",
+                "description": "Query current states for multiple IDs (supported: devices, gateways/hubs, device-groups, locations).",
                 "consumes": [
                     "application/json"
                 ],
@@ -189,12 +189,12 @@
                 "summary": "Query current states",
                 "parameters": [
                     {
-                        "description": "query object",
+                        "description": "query object, attribute value and origin will only be checked if set, otherwise all values or origins will be blacklisted",
                         "name": "query",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.QueryBase"
+                            "$ref": "#/definitions/model.QueryWithAttributeFilter"
                         }
                     }
                 ],
@@ -1107,40 +1107,24 @@
             "type": "integer",
             "format": "int64",
             "enum": [
-                -9223372036854775808,
-                9223372036854775807,
                 1,
                 1000,
                 1000000,
                 1000000000,
                 60000000000,
-                3600000000000,
-                -9223372036854775808,
-                9223372036854775807,
                 1,
                 1000,
-                1000000,
-                1000000000,
-                60000000000,
-                3600000000000
+                1000000
             ],
             "x-enum-varnames": [
-                "minDuration",
-                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
                 "Second",
                 "Minute",
-                "Hour",
-                "minDuration",
-                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
-                "Millisecond",
-                "Second",
-                "Minute",
-                "Hour"
+                "Millisecond"
             ]
         },
         "model.HistoricalStates": {
@@ -1171,18 +1155,6 @@
                 }
             }
         },
-        "model.QueryBase": {
-            "type": "object",
-            "properties": {
-                "ids": {
-                    "description": "IDs for witch states are to be retrieved.",
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
         "model.QueryHistorical": {
             "type": "object",
             "properties": {
@@ -1208,6 +1180,24 @@
                 "until": {
                     "description": "Timestamp in RFC 3339 format, can be combined with 'range' or 'since'.",
                     "type": "string"
+                }
+            }
+        },
+        "model.QueryWithAttributeFilter": {
+            "type": "object",
+            "properties": {
+                "device_attribute_blacklist": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Attribute"
+                    }
+                },
+                "ids": {
+                    "description": "IDs for witch states are to be retrieved.",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -1261,6 +1251,20 @@
                 },
                 "time": {
                     "description": "Timestamp in RFC 3339 format.",
+                    "type": "string"
+                }
+            }
+        },
+        "models.Attribute": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "origin": {
+                    "type": "string"
+                },
+                "value": {
                     "type": "string"
                 }
             }
